- generify hook interface - move timeout event hook to timeoutHandler to avoid special case of final attempt - add defaults to maintain previous interface - renamed TimeoutHandler.onTimeout() to scheduleTimeout()